# DjangoRest-TallerApi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  schema.yml
.github/workflows/: deploy.yml
api/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_cita.py  0003_especialidad_empleado.py  0004_consecutivoorden_ordentrabajo.py  0005_historialestadoorden.py  0006_diagnostico.py  0007_detalleservicioorden.py  0008_recomendacionmantenimiento.py  0009_cita_motivo_cancelacion.py  0010_alter_cliente_options_cliente_apellidos_and_more.py
config/: settings.py  urls.py
