[project]
name = "djangorf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
]
